# dmp

./: CMakeLists.txt  README  package.xml
include/dmp/: fourier_approx.h  function_approx.h  linear_approx.h
msg/: DMPPoint.msg
nodes/: c-shape_dmp-weights.bag  c-shape_dmp.bag  c-shape_plan-poses.bag  c-shape_planned-trj.bag  dmp-config.yaml  dmpClient.py  dmp_client.py  dmp_data.bag  dmp_plan-cfg.yaml  dmp_plan-trj.bag  dmp_server.cpp  example.py  export_bags_as_png.py  fileHelper.py  learn_dmp.py  learn_dmp_from_trj.py  plan-config_joints.yaml  plan-config_poses.yaml  plan_trj_using_dmp.py  plan_using-dmp.py  robot_dmp-weights.bag  robot_dmp.bag  robot_joint-states.bag  robot_plan-joints.bag  robot_planned-trj.bag  robot_trj-joints.bag
src/: dmp.cpp  fourier_approx.cpp  linear_approx.cpp  radial_approx.cpp
srv/: GetDMPPlan.srv  LearnDMPFromDemo.srv  SetActiveDMP.srv
