<?xml version="1.0"?>
<package>
  <name>dmp</name>
  <version>0.0.0</version>
  <description>The dmp package</description>

  <maintainer email="sniekum@cmu.edu">Scott Niekum</maintainer>
  <author>Scott Niekum</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/dmp</url>
  
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen</run_depend>
  
</package>